Try Build Feature (fab_anime, mpChart-notSynchronize)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="login_page">Login First</string>
+    <string name="nav_status">www.geeksfarm.com</string>
+    <string name="token_id">TOKEN VALUES HERE</string>
 
 
     <string-array name="autocomplete_email">
